Fixed background bug on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -36,8 +36,9 @@
 }
 
 .blurred-logo-text {
-	position: relative;
-	left: -50%;
+	display: block;
+	opacity: 1;
+	transition: opacity 0.5s;
 }
 
 .blurred-container {
@@ -56,13 +57,12 @@
 }
 
 .main-logo {
-	max-width: 100%;
-	max-height: 100%;
+	max-width: 20%;
 	transition: transform .2s;
 }
 
 .main-logo:hover {
-	transform: scale(1.05);
+	transform: scale(1.075);
 }
 
 .social-logo {
@@ -120,7 +120,7 @@
 
 .center-panel {
 	margin-top: 6%;
-	margin-bottom: 4%;
+	margin-bottom: -10%;
 	opacity: 1;
     transition: opacity 0.5s;
 }
